# pyjdata

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: check-pypi-upload.sh
.github/workflow/: run_test.yml
.github/workflows/: run_test.yml
benchmark/: benchcodecs.py  benchnifti.py
jdata/: __init__.py  __main__.py  cmd.py  csv.py  csvtsv.py  h5.py  jdata.py  jdict.py  jdictionary.py  jfile.py  jgifti.py  jnifti.py  jpath.py  jschema.py  neurojson.py  njprep.py  testjd.py
test/: __init__.py  benchcodecs.py  test_comprehensive.py  testgifti.py  testjd.py  testjdict.py  testneuroj.py  testnifti.py  testsnirf.py
