[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jdata"
version = "0.9.4"
description = "JSON/binary JSON formats for exchanging Python and Numpy data"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Qianqian Fang", email = "fangqq@gmail.com" },
]
maintainers = [
    { name = "Qianqian Fang", email = "fangqq@gmail.com" },
]
keywords = [
    "JSON", "JData", "UBJSON", "BJData", "OpenJData",
    "NeuroJSON", "JNIfTI", "JMesh", "Encoder", "Decoder",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["numpy>=1.8.0"]

[project.urls]
Homepage = "https://github.com/NeuroJSON/pyjdata"
Documentation = "https://github.com/NeuroJSON/pyjdata#readme"
Repository = "https://github.com/NeuroJSON/pyjdata"
Issues = "https://github.com/NeuroJSON/pyjdata/issues"

[project.optional-dependencies]
bjdata = ["bjdata"]
lz4 = ["lz4"]
hdf5 = ["h5py"]
matlab = ["scipy"]
msgpack = ["msgpack"]
blosc2 = ["blosc2"]
all = ["bjdata", "lz4", "h5py", "scipy", "msgpack", "blosc2"]
dev = ["bjdata", "lz4", "h5py", "scipy", "msgpack", "blosc2", "black", "build"]

[tool.setuptools.packages.find]
include = ["jdata*"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]
